Edited wiki page Developpements through web user interface.

--- a/wiki/Developpements.wiki
+++ b/wiki/Developpements.wiki
@@ -1,3 +1,4 @@
+#labels Phase-Implementation
 = *Développement de Reyn Tweets* =
 
 Où en est Reyn Tweets ?
@@ -5,11 +6,12 @@ Où en est Reyn Tweets ?
 == Ce qui est fait ==
 
   * Architecture d'un Appel à l'API Twitter.
+  * Intégration de QJSON [http://qjson.sourceforge.net] pour le parsage des résultats délivrés par l'API Twitter.
 
 
 == Ce qui reste à faire ==
 
-  # Parsage des résultats de l'API Twitter : intégration de QJSON [http://qjson.sourceforge.net].
+  # Parsage des résultats de l'API Twitter avec QJSON.
   # Authentification à Twitter avec OAuth.
   # Modèle de données
   # Approfondir la documentation
