--- a/wiki/Developpements.wiki
+++ b/wiki/Developpements.wiki
@@ -8,11 +8,12 @@ Où en est Reyn Tweets ?
   * Architecture d'un Appel à l'API Twitter.
   * Intégration de QJSON [http://qjson.sourceforge.net] pour le parsage des résultats délivrés par l'API Twitter.
   * Parsage des résultats de l'API Twitter avec QJSON.
+  * Traitement des cas d'erreur.
 
 
 == Ce qui reste à faire ==
 
-  # Traitement des cas d'erreur
+  # Fix du crash sur le lancement de Reyn Tweets après la refonte de RequestResult
   # Authentification à Twitter avec OAuth.
   # Modèle de données
   # Approfondir la documentation
