--- a/wiki/Developpements.wiki
+++ b/wiki/Developpements.wiki
@@ -14,19 +14,19 @@ Où en est Reyn Tweets ?
     * Comprendre OAuth
     * Choisir une librairie pour OAuth (QOAuth ? kQOAuth ?) : pas de librairies annexe afin de pouvoir réutiliser le Twitter Communicator
     * Mettre en place l'architecture.
+    * Adapter l'architecture existante (se fera en cours de codage si nécessaire).
     * Codage
       * Création des classes
+      * Codage de OAuthManager
+      * Codage des OAuthRequesters
+      * Intégration de l'OAuthManager dans les requesters et le TwitterCommunicator
 
 
 == Ce qui reste à faire ==
 
   # _Authentification à Twitter avec OAuth :_
     # Faire une procédure de "3-legged authorization" indépendante de Reyn Tweets pour finir d'assimiler le processus (est-ce bien nécessaire ?.
-    # Adapter l'architecture existante (se fera en cours de codage si nécessaire).
     # Coder
-      # Codage de OAuthManager
-      # Codage de OAuthRequester
-      # Intégration de l'OAuthManager dans les requesters et le TwitterCommunicator
       # Adaptation du TwitterCommunicator
       # Stockage des tokens (en clair c'est mal !).
     # Tester
