--- a/wiki/Developpements.wiki
+++ b/wiki/Developpements.wiki
@@ -20,6 +20,7 @@ Où en est Reyn Tweets ?
       * Codage de OAuthManager
       * Codage des OAuthRequesters
       * Intégration de l'OAuthManager dans les requesters et le TwitterCommunicator
+      * Adaptation du TwitterCommunicator
 
 
 == Ce qui reste à faire ==
@@ -27,7 +28,7 @@ Où en est Reyn Tweets ?
   # _Authentification à Twitter avec OAuth :_
     # Faire une procédure de "3-legged authorization" indépendante de Reyn Tweets pour finir d'assimiler le processus (est-ce bien nécessaire ?.
     # Coder
-      # Adaptation du TwitterCommunicator
+      # Résolution du problème de linkage (issue 11).
       # Stockage des tokens (en clair c'est mal !).
     # Tester
   # Passage à QtCreator 2.4.0 : vérifier qu'il n'y a pas eu de problèmes.
