--- a/wiki/Developpements.wiki
+++ b/wiki/Developpements.wiki
@@ -22,6 +22,7 @@ Où en est Reyn Tweets ?
       * Codage des OAuthRequesters
       * Intégration de l'OAuthManager dans les requesters et le TwitterCommunicator
       * Adaptation du TwitterCommunicator
+      * Résolution du problème de linkage (issue 11).
 
 
 == Ce qui reste à faire ==
@@ -29,8 +30,7 @@ Où en est Reyn Tweets ?
   # _Authentification à Twitter avec OAuth :_
     # Faire une procédure de "3-legged authorization" indépendante de Reyn Tweets pour finir d'assimiler le processus (est-ce bien nécessaire ?.
     # Coder
-      # Résolution du problème de linkage (issue 11).
-      # Stockage des tokens (en clair c'est mal !).
+      # Stockage des tokens (en clair c'est mal !) : se fera après le debug.
     # Tester
   # Modèle de données
   # Approfondir la documentation
