--- a/wiki/Developpements.wiki
+++ b/wiki/Developpements.wiki
@@ -31,6 +31,9 @@ Où en est Reyn Tweets ?
         * Structure mise en place (OAuthWidget) et intégration du controlleur chargé de faire le travail (OAuthProcess).
         * Gestion de la partie UI de l'OAuthWidget (affichage de la page Web, affichage des fenêtres d'erreurs et replacement dans le processus d'authentification).
       * Intégration de l'OAuthWidget dans le widget de test.
+  * Documentation :
+    * Génération de la documentation Doxygen de Reyn Tweets.
+    * Automatisation de la génération de documentation.
 
 
 == Ce qui reste à faire ==
@@ -47,8 +50,9 @@ Où en est Reyn Tweets ?
     # Ecran de chargement (l'OAuthManager qui récupère ses tokens au lancement)
   # Faire des tests unitaires et d'intégration (issue 20).
   # Modèle de données
-  # Approfondir la documentation
-  # Génération de la documentation Doxygen de Reyn Tweets et publication quelque part (Google Sites ?)
+  # Documentation :
+    # Approfondir la documentation
+    # Publication quelque part (Google Sites ?)
   # Implémentation des fonctionnalités de base.
   # Interface graphique (UI).
     # Intégration de l'OAuthWidget dans l'application
