Edited wiki page OAuthWork through web user interface.

--- a/wiki/OAuthWork.wiki
+++ b/wiki/OAuthWork.wiki
@@ -25,3 +25,4 @@
     * Stockage des tokens (en clair c'est mal !).
   * Tester
     * Plantage de fin de process (issue 36)
+    * Cas avec des erreurs (requêtes ne finissant pas en 200 genre pas de réseau)
