--- a/wiki/Developpements.wiki
+++ b/wiki/Developpements.wiki
@@ -11,29 +11,7 @@ Où en est Reyn Tweets ?
   * Traitement des cas d'erreur.
   * Fix du crash sur le lancement de Reyn Tweets après la refonte de RequestResult (issue 8).
   * Passage à QtCreator 2.4.0 : vérifier qu'il n'y a pas eu de problèmes.
-  * _Authentification avec OAuth :_
-    * Comprendre OAuth
-    * Choisir une librairie pour OAuth (QOAuth ? kQOAuth ?) : pas de librairies annexe afin de pouvoir réutiliser le Twitter Communicator
-    * Mettre en place l'architecture.
-    * Adapter l'architecture existante (se fera en cours de codage si nécessaire).
-    * Faire une procédure de "3-legged authorization" indépendante de Reyn Tweets pour finir d'assimiler le processus (est-ce bien nécessaire ?). -> Fait en déboguant.
-    * Codage :
-      * Création des classes
-      * Codage de OAuthManager
-      * Codage des OAuthRequesters
-      * Intégration de l'OAuthManager dans les requesters et le TwitterCommunicator
-      * Adaptation du TwitterCommunicator
-      * Résolution du problème de linkage (issue 11).
-      * Mettre en place une procédure de bout en bout pour l'authentification.
-      * Faire l'UI de l'autorisation de Reyn Tweets sur le compte Twitter
-        * Gestion de la partie UI de l'OAuthWidget (affichage de la page Web, affichage des fenêtres d'erreurs et replacement dans le processus d'authentification).
-      * Faire l'UI de l'autorisation de Reyn Tweets sur le compte Twitter.
-        * Structure mise en place (OAuthWidget) et intégration du controlleur chargé de faire le travail (OAuthProcess).
-        * Gestion de la partie UI de l'OAuthWidget (affichage de la page Web, affichage des fenêtres d'erreurs et replacement dans le processus d'authentification).
-      * Intégration de l'OAuthWidget dans le widget de test.
-      * Stockage des tokens (en clair c'est mal !).
-    * Tester
-      * Plantage de fin de process (issue 36)
+  * _Authentification avec OAuth :_ [https://code.google.com/p/reyn-tweets/wiki/OAuthWork?ts=1325950615&updated=OAuthWork]
   * Documentation :
     * Génération de la documentation Doxygen de Reyn Tweets.
     * Automatisation de la génération de documentation.
@@ -41,11 +19,12 @@ Où en est Reyn Tweets ?
 
 == Ce qui reste à faire ==
 
-  # _Authentification à Twitter avec OAuth :_
+  # Sauvegarde des données d'une utilisation sur l'autre
+    # Sérialisation des tokens existants pour être réutilisés d'une utilisation du logiciel à l'autre.
+    # Chargement des données dans l'application et leur sauvegarde.
+    # Mise en place d'une architecture pour ça.
     # Coder
-      # Sérialisation des tokens existants pour être réutilisés d'une utilisation du logiciel à l'autre.
     # Tester
-      # Cas avec des erreurs (requêtes ne finissant pas en 200 genre pas de réseau)
   # UI quand on arrive sur l'application :
     # Ecrans d'autorisation à manipuler le compte Twitter.
     # Ecran de chargement (l'OAuthManager qui récupère ses tokens au lancement)
