--- a/wiki/Developpements.wiki
+++ b/wiki/Developpements.wiki
@@ -16,8 +16,11 @@ Où en est Reyn Tweets ?
     * Génération de la documentation Doxygen de Reyn Tweets.
     * Automatisation de la génération de documentation.
   * Modèle de données
-    * Modèle d'un tweet et de ses sous composants
+    * Modèle pour la sérialisation.
     * Modèle d'un user
+    * Modèle d'un tweet et de ses sous composants (Tweet Entities)
+    * Modèle d'une timeline
+    * Mettre à jour la doc' de ce qui a déjà été fait.
 
 
 == Ce qui reste à faire ==
@@ -33,8 +36,6 @@ Où en est Reyn Tweets ?
     # Ecran de chargement (l'OAuthManager qui récupère ses tokens au lancement)
   # Faire des tests unitaires et d'intégration (issue 20).
   # Modèle de données
-    # Mettre à jour la doc' de ce qui a déjà été fait.
-    # Modèle d'une timeline
     # Faire du rangement dans les classes de modèle
   # Documentation :
     # Approfondir la documentation
