--- a/wiki/Developpements.wiki
+++ b/wiki/Developpements.wiki
@@ -6,7 +6,7 @@ Où en est Reyn Tweets ?
 == Ce qui est fait ==
 
   * Architecture d'un Appel à l'API Twitter.
-  * Intégration de QJSON [http://qjson.sourceforge.net] pour le parsage des résultats délivrés par l'API Twitter.
+  * Intégration de QJSON ([http://qjson.sourceforge.net]) pour le parsage des résultats délivrés par l'API Twitter.
   * Parsage des résultats de l'API Twitter avec QJSON.
   * Traitement des cas d'erreur.
   * Fix du crash sur le lancement de Reyn Tweets après la refonte de RequestResult (issue 8).
@@ -32,7 +32,7 @@ Où en est Reyn Tweets ?
     * Modèle d'une timeline
     * Mettre à jour la doc' de ce qui a déjà été fait.
   * Interface graphique (UI)
-    *Portage QML de l'application (UI gérée avec QML/ Qt Quick et non C++/Qt comme initialement prévu)
+    * Portage QML de l'application (UI gérée avec QML/ Qt Quick et non C++/Qt comme initialement prévu)
 
 
 == Ce qui reste à faire ==
